Fixed TournamentWinner competitions cycle instead of linkedMap